refactor: List<Lotto>의 래핑 클래스를 도메인에 추가 구현, 로직 이동