@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import domain.lotto.Lotto;
 import domain.lotto.LottoFactory;
+import domain.lotto.LottoGroup;
 import domain.lotto.WinningLotto;
 import exception.NullException;
 import java.util.ArrayList;
@@ -25,20 +26,12 @@ class ResultTest {
     }
 
     @Test
-    void 생성자_빈로또_에러() {
-        //then
-        assertThatThrownBy(() -> Result.of(new ArrayList<>(), winningLotto))
-                .isInstanceOf(NullException.class)
-                .hasMessage("1개 이상의 값이 포함되어야 한다.");
-    }
-
-    @Test
     void 생성자_1등_검사() {
         //given
         Lotto lotto = Lotto.from(NumsGenerator.generate(Arrays.asList(1, 2, 3, 4, 5, 6)));
 
         //when
-        Result result = Result.of(List.of(lotto), winningLotto);
+        Result result = Result.of(LottoGroup.of(List.of(lotto)), winningLotto);
 
         //then
         assertThat(result.getRankCount(Rank.FIRST)).isEqualTo(1);
@@ -50,7 +43,7 @@ class ResultTest {
         Lotto lotto = Lotto.from(NumsGenerator.generate(Arrays.asList(1, 2, 3, 4, 5, 6)));
 
         //when
-        Result result = Result.of(Arrays.asList(lotto, lotto), winningLotto);
+        Result result = Result.of(LottoGroup.of(List.of(lotto, lotto)), winningLotto);
 
         //then
         assertThat(result.getRankCount(Rank.FIRST)).isEqualTo(2);
@@ -64,7 +57,7 @@ class ResultTest {
         Lotto lotto0 = Lotto.from(NumsGenerator.generate(Arrays.asList(7, 8, 9, 11, 12, 13)));
 
         //when
-        Result result = Result.of(Arrays.asList(lotto2, lotto1, lotto0), winningLotto);
+        Result result = Result.of(LottoGroup.of(List.of(lotto2, lotto1, lotto0)), winningLotto);
 
         //then
         assertThat(result.getRankCount(Rank.NONE)).isEqualTo(3);
@@ -76,7 +69,7 @@ class ResultTest {
         Lotto lotto = Lotto.from(NumsGenerator.generate(Arrays.asList(1, 2, 3, 4, 5, 6)));
 
         //when
-        Result result = Result.of(Arrays.asList(lotto, lotto), winningLotto);
+        Result result = Result.of(LottoGroup.of(List.of(lotto, lotto)), winningLotto);
 
         assertThat(result.getPrize()).isEqualTo(4000000000L);
     }
@@ -89,7 +82,7 @@ class ResultTest {
         Lotto lotto0 = Lotto.from(NumsGenerator.generate(Arrays.asList(7, 8, 9, 11, 12, 13)));
 
         //when
-        Result result = Result.of(Arrays.asList(lotto2, lotto1, lotto0), winningLotto);
+        Result result = Result.of(LottoGroup.of(List.of(lotto2, lotto1, lotto0)), winningLotto);
 
         //then
         assertThat(result.getPrize()).isEqualTo(0);
